[b][color=orange]v4.70[/color], 21.12.2020[/b][list]
[*]Take account for the new skin api in BigWigs
[*]Layout: Update the position for Bags/Bank[/list]


[b][color=orange]v4.69[/color], 20.12.2020[/b][list]
[*]Updated GarrisonUI Skin
[*]Updated CovenantRenown Skin
[*]Added back the Quick Join messages to my notification
[*]Updated some utility items for the AutoButtons
[*]Update my item alerts
[*]Added right click to EncounterJournal Button on the MicroBar to open Weekly Rewards
[*]Added some hearthstones to the MicroBar and LocPanel
[*]Updated ChatLinks
[*]Updated some reminders[/list]


[b][color=orange]v4.68[/color], 05.12.2020[/b][list]
[*]AutoButtons: Added a new category: FOODVENDOR
[*]Added some more vignettes to be ignored. Thx isp
[*]Updated Garrison skin
[*]Updated PlayerChoice skin
[*]Added an own BigWigs Queue Timers
[*]Added some hearthstones to MicroBar[/list]


[b][color=orange]v4.67[/color], 29.11.2020[/b][list]
[*]AutoButtons: Added/Updated Shadowlands Pots/Flasks
[*]LocPanel: Updated Teleport Items
[*]Updated Rectangle Minimap to work in Torghast
[*]Added some vignettes to my blacklist in the Notifications
[*]Removed iFilger Profile[/list]


[b][color=orange]v4.66[/color], 23.11.2020[/b][list]
[*]Added an option to adjust the waypoints
[*]Fixed the backdrop from the Minimap if S&L is enabled
[*]Fixed Time DataText
[*]Removed GuildBest from the Mythic Keystone frame
[*]Reworked Instance Difficulty
[*]Fixed border color on the Merchant frame
[*]Added some new hearthstones/flasks/food/pots for Shadowlands[/list]


[b][color=orange]v4.65 for Shadowland PrePatch[/color], 18.11.2020[/b][list]
[*]Fixed a typo.. whoops, thx Kringel
[*]Replaced the AFK Time with a Logout timer[/list]


[b][color=orange]v4.64 for Shadowland PrePatch[/color], 18.11.2020[/b][list]
[*]The AutoButtons will now hide in Pet Battle
[*]Dont force the spacing on UnitFrames Buffs/Debuffs
[*]Added an notification icon on the MicroBar Guild button. Thx fang2hou <3[/list]

