@@ -16,8 +16,14 @@ local DISABLED_FONT_COLOR = DISABLED_FONT_COLOR
 
 local ChangeLogData = {
 	"Changes:",
-		"• Take account for the new skin api in BigWigs",
-		"• Layout: Update the position for Bags/Bank",
+		"• LocPanel: Add Cypher of Relocation to port items",
+		"• AFK/FlightMode: Added a covenant texture",
+		"• Skins: Various updates",
+		"• Misc: Replace the Maw Threat Widget with a simple StatusBar",
+		"• AutoButtons: Added 2 more Bars in total now of 5",
+		"• Armory: Added an indicator to show missing enchants/gems",
+		"• Fonts: Replace GothamNarrow fonts with a newer one",
+		"• MicroBar: Added a Shadow",
 
 		-- "• ''",
 	" ",
